# Aivora

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  aivora.db  process_logo.py  pyproject.toml
.agent/: architecture.md  coding-standards.md  project.md  tasks.md  tech-stack.md
aivora_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alembic/: env.py
alembic/versions/: 92a3a22f7f84_initial_postgresql_schema.py
app/: __init__.py  agent.py  auth.py  config.py  database.py  firebase_config.py  main.py
app/agents/: __init__.py  insight_agent.py  onboarding_agent.py
app/api/: __init__.py
app/api/v1/: __init__.py  auth.py
app/core/: __init__.py  deps.py  security.py
app/models/: __init__.py  dashboard.py  marketing.py  session.py  user.py
app/routers/: __init__.py  assistant.py  auth.py  dashboard.py  landing.py  weather.py
app/schemas/: __init__.py  assistant.py  auth.py  dashboard.py  marketing.py  weather.py
app/services/: __init__.py  assistant_service.py  auth_service.py  dashboard_service.py  weather_service.py
app/sub_agents/: __init__.py  budget_estimator.py  critic.py  packing_list.py  scheduler.py  shopping_agent.py  storage.py  travel_planner.py  weather.py
app/tools/: __init__.py  notification_tool.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
mcp_servers/: __init__.py  calendar_wrapper.py
supabase/: config.toml
tests/: __init__.py  test_assistant_api.py  test_dashboard_fullstack.py
tests/integration/: test_auth.py  test_dashboard.py
tests/unit/: test_api.py
(+68 files in other folders)
