[project]
name = "aivora-backend"
version = "0.1.0"
description = "Aivora Personal Life Manager - Concierge Agent Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.28",
    "aiosqlite>=0.20.0",
    "asyncmy>=0.2.9",
    "alembic>=1.13.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "google-adk>=0.1.0",
    "openai>=2.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"



